<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="#ff0000"
        android:text="@string/text_bluetooth_off" />

    <Button
        android:id="@+id/btn_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_enable"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_view_paired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_view_paired"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_scan_devices"
        style="@style/button"/>
    <Button
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/text_settings"
        style="@style/button"/>

    <Button
        android:id="@+id/btn_connect_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/test_connect_devices"
        style="@style/button"/>


    <Button
        android:id="@+id/btn_disconnect_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/text_disconnect_devices"
        style="@style/button"/>


    <Button
        android:id="@+id/btn_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="true"
        android:text="@string/text_recording"
        style="@style/button"/>

</LinearLayout>
